tests/baselines/reference/redefineArray.errors.txt
tests/cases/compiler/redefineArray.ts(1,1): error TS2323: Type '(n: number, s: string) => number' is not assignable to type 'ArrayConstructor'.
  Property 'isArray' is missing in type '(n: number, s: string) => number'.


==== tests/cases/compiler/redefineArray.ts (1 errors) ====
    Array = function (n:number, s:string) {return n;};
    ~~~~~
!!! error TS2323: Type '(n: number, s: string) => number' is not assignable to type 'ArrayConstructor'.
!!! error TS2323:   Property 'isArray' is missing in type '(n: number, s: string) => number'.